--- a/src/app/seller-add-product/seller-add-product.component.css
+++ b/src/app/seller-add-product/seller-add-product.component.css
@@ -1,7 +1,7 @@
 form {
     max-width: 400px;
     margin: 0 auto;
-    margin-top: 70px;
+    margin-top: 20px;
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
@@ -96,15 +96,21 @@ form {
       transform: scale(1.2);
     }
   }
-
-
-
-  .animated-heading {
+  .textarea {
+    border: 2px solid #ccc;
+    padding: 10px;
+    height: 45px;
+    width: 360px;
+    border-radius: 5px;
+    transition: border-color 0.2s ease-in-out;
+    padding-bottom: 10px;
+  }
+  
+  .textarea:hover {
+    border-color: #666;
     
-    color: rgb(51,51,51);
-    text-align: center;
-   
   }
   
   
+
   
