--- a/src/app/seller-home/seller-home.component.html
+++ b/src/app/seller-home/seller-home.component.html
@@ -1,1 +1,22 @@
-<p>seller-home works!</p>
+<table>
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Price</th>
+      <th>Color</th>
+      <th>Category</th>
+      <th>Description</th>
+      <th>Image</th> <!-- new column for image -->
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let item of productList">
+      <td>{{item.name}}</td>
+      <td>{{item.price}}</td>
+      <td>{{item.color}}</td>
+      <td>{{item.category}}</td>
+      <td>{{item.description}}</td>
+      <td><img src={{item.image}} alt="{{ item.name }}" width="100"></td> <!-- new column for image -->
+    </tr>
+  </tbody>
+</table>
