--- a/src/app/seller-home/seller-home.component.html
+++ b/src/app/seller-home/seller-home.component.html
@@ -1,22 +1,32 @@
+<h1>Product List</h1>
+<p>{{productmessage}}</p>
 <table>
+  
   <thead>
     <tr>
+      <th>Image</th>
       <th>Name</th>
       <th>Price</th>
       <th>Color</th>
       <th>Category</th>
       <th>Description</th>
-      <th>Image</th> <!-- new column for image -->
+      <th>Action</th>
     </tr>
   </thead>
   <tbody>
     <tr *ngFor="let item of productList">
-      <td>{{item.name}}</td>
-      <td>{{item.price}}</td>
-      <td>{{item.color}}</td>
-      <td>{{item.category}}</td>
-      <td>{{item.description}}</td>
-      <td><img src={{item.image}} alt="{{ item.name }}" width="100"></td> <!-- new column for image -->
+      <td><img src="{{ item.data.image }}" alt="img" width="100"></td>
+      <td>{{ item.data.name }}</td>
+      <td>{{ item.data.price }}</td>
+      <td>{{ item.data.color }}</td>
+      <td>{{ item.data.Category }}</td>
+      <td>{{ item.data.Description }}</td>
+      <td>
+         
+        <fa-icon (click)="deleteproduct(item.id)" [icon]="deleteicon"></fa-icon>
+       <a class="adjust-edit-icon" routerLink="/seller-update-product/{{item.id}}"><fa-icon  [icon]="editicon"></fa-icon></a> 
+        
+      </td>
     </tr>
   </tbody>
 </table>
