complete update product page

--- a/src/app/seller-update-product/seller-update-product.component.html
+++ b/src/app/seller-update-product/seller-update-product.component.html
@@ -1,12 +1,12 @@
 <form #updateproduct="ngForm" (ngSubmit)="submit(updateproduct.value)" >
     <h1 class="animated-heading">Update Product</h1>
-   
-    <input type="text"  name="name"  ngModel placeholder="Enter Product Name">
-    <input type="text"  name="price"  ngModel placeholder="Enter Product Price">
-    <input type="text"  name="color"  ngModel placeholder="Enter  Product Color">
-    <input type="text"  name="Category"  ngModel placeholder="Enter  Product Category ">
-    <textarea class="textarea" type="text" name="Description"  ngModel placeholder="Enter Product Description"></textarea>
-    <input type="text"  name="image"  ngModel placeholder="Enter Product Image URL">
+   <p>{{productmessage}}</p>
+    <input type="text"  name="name"  ngModel="{{productData?.name}}" placeholder="Enter Product Name">
+    <input type="text"  name="price"  ngModel="{{productData?.price}}" placeholder="Enter Product Price">
+    <input type="text"  name="color"  ngModel="{{productData?.color}}" placeholder="Enter  Product Color">
+    <input type="text"  name="Category"  ngModel="{{productData?.category}}" placeholder="Enter  Product Category ">
+    <textarea class="textarea" type="text" name="Description"  ngModel="{{productData?.description}}" placeholder="Enter Product Description"></textarea>
+    <input type="text"  name="image"  ngModel="{{productData?.image}}" placeholder="Enter Product Image URL">
     
     <button class="myButton" type="submit">Update Product</button>
 
