--- a/src/app/seller-home/seller-home.component.html
+++ b/src/app/seller-home/seller-home.component.html
@@ -15,12 +15,12 @@
   </thead>
   <tbody>
     <tr *ngFor="let item of productList">
-      <td><img src="{{ item.data.image }}" alt="img" width="100"></td>
-      <td>{{ item.data.name }}</td>
-      <td>{{ item.data.price }}</td>
-      <td>{{ item.data.color }}</td>
-      <td>{{ item.data.Category }}</td>
-      <td>{{ item.data.Description }}</td>
+      <td><img src="{{ item.image }}" alt="img" width="100"></td>
+      <td>{{item.name }}</td>
+      <td>{{ item.price }}</td>
+      <td>{{ item.color }}</td>
+      <td>{{ item.category}}</td>
+      <td>{{ item.description}}</td>
       <td>
          
         <fa-icon (click)="deleteproduct(item.id)" [icon]="deleteicon"></fa-icon>
@@ -30,3 +30,7 @@
     </tr>
   </tbody>
 </table>
+
+
+
+
