--- a/src/app/seller-add-product/seller-add-product.component.html
+++ b/src/app/seller-add-product/seller-add-product.component.html
@@ -4,7 +4,7 @@
     <input type="text"  name="name"  ngModel placeholder="Enter Product Name">
     <input type="text"  name="price"  ngModel placeholder="Enter Product Price">
     <input type="text"  name="color"  ngModel placeholder="Enter  Product Color">
-    <input type="text"  name="Category"  ngModel placeholder="Enter  Product Category ">
+    <input type="text"  name="category"  ngModel placeholder="Enter  Product Category ">
     <textarea class="textarea" type="text" name="description"  ngModel placeholder="Enter Product Description"></textarea>
     <input type="text"  name="image"  ngModel placeholder="Enter Product Image URL">
     
