--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~bootstrap/dist/css/bootstrap.css';
+.carousel-caption{
+    position: absolute;
+right: 15%;
+bottom: 1.25rem;
+left: 15%;
+padding-top: 1.25rem;
+padding-bottom: 1.25rem;
+color: #fff;
+text-align: center;
+background-color: #000000c4;
+}
