--- a/src/styles.css
+++ b/src/styles.css
@@ -11,3 +11,9 @@ color: #fff;
 text-align: center;
 background-color: #000000c4;
 }
+
+/* body {
+    background-image: url('https://queue-it.com/media/ppcp1twv/product-drop.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+  } */
