--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -2,25 +2,27 @@
     position: relative;
     width: 100%;
     overflow: hidden;
-    background-color: rgb(51,51,51);
+    background-color:rgb(13,17,23);
     width: 100%;
-    
+   
 }
 .product-header-image img{
    height: 500px;
    width: 90%;
    margin-left: 4rem;
+   margin-top: 10px;
 }
 
 
 
 .card {
-    width: 11rem;
-    border: 1px solid #ccc;
+    width: 1rem;
+    border: 2px solid #ccc;
     border-radius: 5px;
     overflow: hidden;
     transition: all 0.3s ease-in-out;
-    margin: 30px
+    margin: 12px;
+    
   }
   
   .card:hover {
@@ -129,6 +131,11 @@
   .column-container {
     display: flex;
     flex-wrap: wrap;
-    background-color: rgb(51,51,51);
+    margin: 0;
+    padding: 0;
+    justify-content: center;
+    background-color:rgb(13,17,23);
+    
   }
-  
+
+ 
