--- a/src/app/seller-add-product/seller-add-product.component.html
+++ b/src/app/seller-add-product/seller-add-product.component.html
@@ -1,3 +1,4 @@
+<div class="my-component ">
 <form #addproduct="ngForm" (ngSubmit)="submit(addproduct.value)" >
     <h1 class="animated-heading">Add Product</h1>
     <p>{{addProductMessage}}</p>
@@ -11,3 +12,4 @@
     <button class="myButton" type="submit">Add Product</button>
 
   </form>
+</div>
