--- a/src/app/seller-auth/seller-auth.component.css
+++ b/src/app/seller-auth/seller-auth.component.css
@@ -1,11 +1,15 @@
 form {
     max-width: 400px;
     margin: 0 auto;
-    margin-top: 70px;
+    margin-top: 100px;
+    margin-bottom: 20px;
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
     transition: all 0.3s ease-in-out;
+    height: 100%;
+    width: 100%;
+    
   }
   
   form:hover {
@@ -105,6 +109,10 @@ form {
     text-align: center;
    
   }
-  
-  
-  
+
+
+ body {
+  background-image: url('https://queue-it.com/media/ppcp1twv/product-drop.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+}
