--- a/src/app/seller-home/seller-home.component.css
+++ b/src/app/seller-home/seller-home.component.css
@@ -2,15 +2,16 @@ table {
   border-collapse: collapse;
   width: 100%;
   border-color: rgb(51,51,51) ;
-  margin-top: 10px;
+  padding-top: 10px;
  
 }
 
  td {
   
-  color: black;
+  color: white;
   padding: 8px;
   text-align: left;
+  background-color: #333333;
   border-bottom: 1px solid rgb(51,51,51);
   
 }
@@ -32,12 +33,14 @@ td img {
 p {
   text-align: center;
   color: red;
+  background-color: #333333;
 }
 
 h1 {
   font-size: 36px;
   font-weight: bold;
-  color: #333;
+  color: white;
+  background-color: #333333;
   text-align: center;
   /* other styles... */
 }
