--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -2,8 +2,9 @@
     position: relative;
     width: 100%;
     overflow: hidden;
-    background-color:rgb(13,17,23);
+    background-color:  rgb(136,136,138);
     width: 100%;
+
    
 }
 .product-header-image img{
@@ -11,6 +12,7 @@
    width: 90%;
    margin-left: 4rem;
    margin-top: 10px;
+   margin-bottom: 10px;
 }
 
 
@@ -134,7 +136,7 @@
     margin: 0;
     padding: 0;
     justify-content: center;
-    background-color:rgb(13,17,23);
+  background-color:rgb(22,27,34);
     
   }
 
