--- a/src/app/seller-auth/seller-auth.component.css
+++ b/src/app/seller-auth/seller-auth.component.css
@@ -1,8 +1,8 @@
 form {
     max-width: 400px;
     margin: 0 auto;
-    margin-top: 100px;
-    margin-bottom: 20px;
+    margin-top: 40px;
+    color: white;
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
@@ -10,6 +10,9 @@ form {
     height: 100%;
     width: 100%;
     
+  }
+  label{
+    color: white;
   }
   
   form:hover {
@@ -105,7 +108,7 @@ form {
 
   .animated-heading {
     
-    color: rgb(51,51,51);
+    color: whitw;
     text-align: center;
    
   }
